fixed bug in remove btn on mobile version

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,6 +1,9 @@
 .action-button {
   @include centeredByFlex;
 
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.01em;
   text-transform: uppercase;
 
   border: 2px solid var(--accent-violet-color);
